[package]
name = "pdfium"
version = "0.0.4"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.2.4", features = ["napi8"] }
napi-derive = "3.2.4"
pdfium-render = { version = "0.8.35", features = [
  "pdfium_latest",
  "image_latest",
  "thread_safe",
  "static",
] }
image = "0.25.6"

[build-dependencies]
napi-build = "2.2.3"
